--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Variables && Color Palette */
+:root {
+  --navWidth: 100px;
+
+  --background: #101011;
+  --surface: #030303;
+  --primary: #ef0914;
+  /* --secondary: #fff; */
+  --variation: #09a886;
+
+  --backgroundOp50: #101011aa;
+  --backgroundLight: #202022;
+  --backgroundDark: #050510;
+  --surfaceLight: #131313;
+  --surfaceDark: #000000;
+  --primaryLight: #ff1723;
+  --primaryDark: #b60912;
+  /* --secondaryLight: #fff; */
+  /* --secondaryDark: #fff; */
+  --variationLight: #25eec2;
+  --variationDark: #056e58;
+
+  --onBackground: #fff;
+  --onSurface: #fff;
+  --onPrimary: #fff;
+  /* --onSecondary: #fff; */
+  --onVariation: #fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Main Stuff */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
+header {
+  height: 100vh;
+}
+
+main {
+  min-height: 100vh;
+  color: var(--onBackground);
+  background-color: var(--background);
+}
+
+a {
+  color: inherit;
+  font-size: inherit;
+  border-radius: 5px;
+  font-family: inherit;
+  text-decoration: none;
+}
+
+/* This Site Main Stuff */
+.fa {
+  display: inline-block;
+  transition: ease-in-out 0.8s;
+}
+
+/* Animations */
