--- a/src/components/header.css
+++ b/src/components/header.css
@@ -3,7 +3,7 @@ header {
   color: var(--onSurface);
   background-position: center;
   background-repeat: no-repeat;
-  /* background-attachment: fixed; */ /* BUG: Make it fixed */
+  background-attachment: fixed; /* BUG: Make it fix */
   background-color: var(--surface);
   padding-inline-start: var(--navWidth) !important;
 }
@@ -18,44 +18,44 @@ header .header__top h1 {
   margin-block-end: 25px;
 }
 
-header .header__top a {
+header .header__continue {
   padding: 10px;
   display: block;
+  cursor: pointer;
   width: fit-content;
   border: 2px solid var(--onSurface);
 }
 
-header .header__top a .header__icons {
+header .header__continue .header__icons {
   font-size: 1.2em;
 }
 
-header .header__top a:hover .header__icons {
+header .header__continue:hover .header__icons {
   color: var(--primary);
 }
 
-header .header__top a h2 {
+header .header__continue h2 {
   margin: 0 10px;
   display: inline-block;
 }
 
-header .header__top a h3 {
+header .header__continue h3 {
   font-weight: 500;
   color: var(--primary);
   display: inline-block;
 }
 
-/* header .header__center { backdrop-filter: blur(5px) } */ /* BUG: Make it Blur */
+/* header .header__center {
+  padding-block-end: 20px;
+
+  backdrop-filter: blur(5px);
+  margin-inline-start: -100px;
+  padding-inline-start: 100px;
+} /* BUG: Make it Blur */
 
 header .header__center .header__type {
   display: flex;
   margin-block-end: -10px;
-}
-
-header .header__center .header__type img {
-  width: 40px;
-  height: 50px;
-  margin: 0 10px;
-  background-color: var(--primary);
 }
 
 header .header__center .header__type h2 {
@@ -69,53 +69,52 @@ header .header__center .header__title {
 }
 
 header .header__center .header__description {
-  width: 60%;
+  width: 62%;
+  padding: 10px;
   margin: 10px 0;
   font-weight: 400;
+  padding-inline-end: 2%;
+  padding-inline-start: 0;
+  backdrop-filter: blur(5px); /* BUG: Make it Blur */
+  background-color: #00000022;
+  border-top-right-radius: 100px;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 100px;
 }
 
 header .header__center .header__watchLinks {
   display: flex;
 }
 
-header .header__center .header__watchLinks a {
+.header__watchLink {
   width: 150px;
   height: 50px;
   display: flex;
+  cursor: pointer;
+  border-width: 2px;
+  border-style: solid;
   align-items: center;
   margin: 20px 30px 0 0;
   justify-content: center;
+  border-color: transparent;
   transition: ease-in-out 0.8s;
-  border: 2px solid var(--surface);
 }
 
-header .header__center .header__watchLinks a:hover {
+.header__watchLink-1,
+.header__watchLink-2:hover {
+  border: 2px solid black;
+}
+
+.header__watchLink:hover {
   background-color: var(--primary);
 }
 
-header .header__center .header__watchLinks a h2 .header__icons {
+.header__watchLink h2 .header__icons {
   font-size: smaller;
   margin-inline-end: 10px;
 }
 
-header .header__center .header__watchLinks a:hover h2 .header__icons {
+.header__watchLink:hover h2 .header__icons {
   color: var(--surface);
-}
-
-header .header__bottom {
-  /* display: none; */
-
-  right: 0;
-  bottom: 0;
-  float: right;
-  position: absolute;
-  text-align: center;
-  margin-block-end: 25px;
-  margin-inline-end: 50px;
-}
-
-header .header__bottom img {
-  width: 250px;
-  height: 60px;
-  display: block;
 }
