--- a/src/components/row.css
+++ b/src/components/row.css
@@ -25,8 +25,24 @@
   margin-inline-start: -20px;
 }
 
+.row__trailer__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .row__trailer__title {
   margin: 15px 0;
+}
+
+.row__trailer__close {
+  cursor: pointer;
+  padding-inline-end: 20px;
+  transition: all 0.3s ease-in-out;
+}
+
+.row__trailer__close:hover {
+  color: var(--primary);
 }
 
 .row__trailer__video {
