--- a/src/components/header.css
+++ b/src/components/header.css
@@ -75,12 +75,17 @@ header .header__center .header__description {
   font-weight: 400;
   padding-inline-end: 2%;
   padding-inline-start: 0;
-  backdrop-filter: blur(5px); /* BUG: Make it Blur */
-  background-color: #00000022;
-  border-top-right-radius: 100px;
   border-top-left-radius: 25px;
+  border-top-right-radius: 100px;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 100px;
+}
+
+header .header__continue,
+header .header__center .header__watchLink,
+header .header__center .header__description {
+  background-color: #00000033;
+  backdrop-filter: blur(5px); /* BUG: Make it Blur On Firefox */
 }
 
 header .header__center .header__watchLinks {
