--- a/src/components/row.css
+++ b/src/components/row.css
@@ -53,3 +53,28 @@
   width: 100%;
   height: 80vh;
 }
+
+/* 📱 Mobile Version */
+@media (max-width: 1024px) {
+  .row {
+    padding-inline-start: 20px !important;
+  }
+
+  .row__title {
+    text-align: center;
+  }
+
+  .row__trailer {
+    width: 96vw;
+    margin-inline-start: -18px;
+  }
+
+  .row__trailer__title {
+    margin-inline-start: 20px;
+  }
+
+  .row__trailer__video {
+    width: 100%;
+    height: 80vh;
+  }
+}
