--- a/src/components/row.css
+++ b/src/components/row.css
@@ -24,9 +24,10 @@
   object-fit: contain;
 }
 
+/* TODO: MAKE it Fade In/Out With an animation */
 .row__trailer {
   width: 100%;
-  margin-inline-start: -20px;
+  margin-block-end: 30px;
 }
 
 .row__trailer__header {
@@ -41,7 +42,7 @@
 
 .row__trailer__close {
   cursor: pointer;
-  padding-inline-end: 20px;
+  padding-inline-end: 23px;
   transition: all 0.3s ease-in-out;
 }
 
@@ -52,21 +53,21 @@
 .row__trailer__video {
   width: 100%;
   height: 80vh;
+  padding-inline-end: 20px;
 }
 
 /* 📱 Mobile Version */
 @media (max-width: 1024px) {
   .row {
-    padding-inline-start: 20px !important;
+    padding-inline-start: 0px !important;
+  }
+
+  .row__cards {
+    margin-inline-start: 20px !important;
   }
 
   .row__title {
     text-align: center;
-  }
-
-  .row__trailer {
-    width: 96vw;
-    margin-inline-start: -18px;
   }
 
   .row__trailer__title {
@@ -76,5 +77,6 @@
   .row__trailer__video {
     width: 100%;
     height: 80vh;
+    padding-inline-end: 0;
   }
 }
